--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "node-telegram-bot-api": "^0.61.0"
   }
