--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 TOKEN=6130712823:AAEGcBB1KLd10jJjdXsPtMGt7viUUVKH_qA
-MONGO_URI=mongodb://127.0.0.1:27017/alpha_bot
+MONGO_URI=mongodb+srv://promoprobot:clusturdbmongob0t@cluster0.el2pj6j.mongodb.net/promoprobot?retryWrites=true&w=majority
